@@ -27,6 +27,7 @@ import hudson.plugins.git.GitSCM;
 import hudson.util.OneShotEvent;
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 import org.eclipse.jgit.api.Git;
 import org.eclipse.jgit.api.errors.GitAPIException;
@@ -468,6 +469,13 @@ public class MergeRequestHookTriggerHandlerImplTest {
                         .withProject(project()
                                 .withWebUrl("https://gitlab.org/test.git")
                                 .build())
+                        .withUser(user().withId(1)
+                                .withName("User")
+                                .withUsername("user")
+                                .withEmail("user@gitlab.com")
+                                .withAvatarUrl(
+                                        "https://www.gravatar.com/avatar/e64c7d89f26bd1972efa854d13d7dd61?s=80&d=identicon")
+                                .build())
                         .build(),
                 true,
                 BranchFilterFactory.newBranchFilter(branchFilterConfig().build(BranchFilterType.All)),
@@ -490,6 +498,13 @@ public class MergeRequestHookTriggerHandlerImplTest {
                                 .build())
                         .withProject(project()
                                 .withWebUrl("https://gitlab.org/test.git")
+                                .build())
+                        .withUser(user().withId(1)
+                                .withName("User")
+                                .withUsername("user")
+                                .withEmail("user@gitlab.com")
+                                .withAvatarUrl(
+                                        "https://www.gravatar.com/avatar/e64c7d89f26bd1972efa854d13d7dd61?s=80&d=identicon")
                                 .build())
                         .build(),
                 true,
@@ -597,6 +612,13 @@ public class MergeRequestHookTriggerHandlerImplTest {
                         .withProject(project()
                                 .withWebUrl("https://gitlab.org/test.git")
                                 .build())
+                        .withUser(user().withId(1)
+                                .withName("User")
+                                .withUsername("user")
+                                .withEmail("user@gitlab.com")
+                                .withAvatarUrl(
+                                        "https://www.gravatar.com/avatar/e64c7d89f26bd1972efa854d13d7dd61?s=80&d=identicon")
+                                .build())
                         .build(),
                 true,
                 BranchFilterFactory.newBranchFilter(branchFilterConfig().build(BranchFilterType.All)),
@@ -622,7 +644,7 @@ public class MergeRequestHookTriggerHandlerImplTest {
         });
         project.setQuietPeriod(0);
         MergeRequestHookTriggerHandler mergeRequestHookTriggerHandler = new MergeRequestHookTriggerHandlerImpl(
-                Arrays.asList(State.opened, State.reopened), Arrays.asList(Action.approved), false, false, false);
+                Arrays.asList(State.opened, State.reopened), List.of(Action.approved), false, false, false);
         mergeRequestHookTriggerHandler.handle(
                 project,
                 mergeRequestHook()
@@ -632,6 +654,13 @@ public class MergeRequestHookTriggerHandlerImplTest {
                                         .withAuthor(user().withName("test").build())
                                         .withId("testid")
                                         .build())
+                                .build())
+                        .withUser(user().withId(1)
+                                .withName("User")
+                                .withUsername("user")
+                                .withEmail("user@gitlab.com")
+                                .withAvatarUrl(
+                                        "https://www.gravatar.com/avatar/e64c7d89f26bd1972efa854d13d7dd61?s=80&d=identicon")
                                 .build())
                         .build(),
                 true,
